# web/src/openapi.yaml
@@ -102,6 +102,55 @@ paths:
                   - message
                 description: Error response containing error message and optional error code
                 title: Error Response
+  '/app-api/v1/p/{id}':
+    get:
+      operationId: getApp-apiV1P:id
+      description: Get a single project by ID
+      tags:
+        - Project
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProjectResponse'
+        '400':
+          description: Bad request - Invalid project ID format
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+                  code:
+                    description: Error code
+                    type: string
+                required:
+                  - message
+                description: Error response containing error message and optional error code
+                title: Error Response
+        '404':
+          description: Project not found or not authenticated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+                  code:
+                    description: Error code
+                    type: string
+                required:
+                  - message
+                description: Error response containing error message and optional error code
+                title: Error Response
+      parameters:
+        - $ref: '#/components/parameters/ReadProjectParams'
   /app-api/v1/auth/sign-up/email:
     post:
       operationId: postApp-apiV1AuthSign-upEmail
@@ -657,3 +706,12 @@ components:
           email: john@apple.com
           email_verified: false
           created_at: 2025-10-05T12:08:28.374Z
+  parameters:
+    ReadProjectParams:
+      in: path
+      name: id
+      schema:
+        type: string
+        format: uuid
+        pattern: '^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$'
+      required: true
